# Django-Recommendation-System

./: .gitignore  README.md  StaticDropdown.vue  Tabulator.vue  docker-compose.yml  mypy.ini  nltk_download.py  pyproject.toml  pytest.ini  sampleTest.py
examples/: celery_app.py
src/: 4c523560-7f70-44f1-8b40-768c4abc647b.json  db.sqlite3  download_movies.py  manage.py
src/api_auth/: permissions.py  urls.py
src/movies/: admin.py  api.py  middlewares.py  models.py  serializers.py  services.py  signals.py  tasks.py  tests.py  urls.py  views.py
src/movies/migrations/: 0001_initial.py  0002_movie_country_movie_extra_data_movie_release_year_and_more.py  0003_usermoviepreferences.py
src/movies/tests/: factories.py  test_api.py  test_serializers.py
src/recommendation_system_django/: __init__.py  asgi.py  base.py  celery.py  dev.py  production.py  production_settings.py  settings.py  urls.py  wsgi.py
src/recommendations/: services.py  tests.py
src/tests/: factories.py
