[project]
name = "recommendation-system"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "alishShrestha", email = "alish.shrestha@dolphin.com.np" }
]
dependencies = [
    "django>=5.1.5",
    "djangorestframework>=3.15.2",
    "django-extensions>=3.2.3",
    "redis>=5.2.1",
    "celery>=5.4.0",
    "django-storages[boto3]>=1.14.4",
    "djangorestframework-simplejwt>=5.4.0",
    "django-cors-headers>=4.6.0",
    "nltk>=3.9.1",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.10.6",
    "scikit-learn>=1.6.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.9.2",
    "mypy>=1.14.1",
    "pytest>=8.3.4",
    "pytest-django>=4.9.0",
    "factory-boy>=3.3.1",
    "requests>=2.32.3",
    "tqdm>=4.67.1",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/recommendation_system"]
